Fixed issue with switching decompilers on linux