@@ -1,2 +1,2 @@
 #!/bin/sh
-java -jar "./lib/@JARNAME@" "$1"
+java -XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED -jar "./lib/@JARNAME@" "$1"
